--- a/_episodes/01-Day1.md
+++ b/_episodes/01-Day1.md
@@ -9,7 +9,7 @@ title: "Exercise 1"
 # keypoints:
 # - "First key point. Brief Answer to questions. (FIXME)"
 ---
-# Selecting a final state and trigger
+# Selecting a final state and trigger (Wednesday Morning)
 
 Choose one of the three $\tau \tau$ final states with at least one hadronically decaying $\tau$. Of the final states we are considering, there are two options for choice of trigger. (Slide 5 of the intro slides). We need to decide which is best for our analysis.
 
@@ -31,7 +31,7 @@ Choose one of the three $\tau \tau$ final states with at least one hadronically 
 
 The available list of all triggers in NANOAOD can be found in the [NANOAOD documentation](https://cms-nanoaod-integration.web.cern.ch/integration/master-102X/mc102X_doc.html#HLT).
 
-To learn to write Python code and use the [NanoAODTools](https://twiki.cern.ch/twiki/bin/view/CMS/NanoAODTools) framework, we will start with [`exampleAnalysis.py`](https://github.com/fojensen/nanoAOD-tools/blob/cmsdas2022/python/postprocessing/examples/exampleAnalysis.py) as a template. To run the example:
+To learn to write Python code and use the [NanoAODTools](https://twiki.cern.ch/twiki/bin/view/CMS/NanoAODTools) framework, we will start with [`exampleAnalysis.py`](https://github.com/jingyucms/nanoAOD-tools/blob/cmsdas2023/python/postprocessing/examples/exampleAnalysis.py) as a template. To run the example:
 
 ```shell
 cd ${CMSSW_BASE}/src/PhysicsTools/NanoAODTools/analysis/
@@ -46,16 +46,10 @@ root histOut.root
 TBrowser b
 ```
 
-The input file is a TTJets MC sample, but you will need to switch that to a DY (Z) MC sample. Use the file found here:
+The input file is The input file is:
 
 ```
-eosls -alh /store/user/cmsdas/2022/short_exercises/Tau/DYJetsToLL__7B7D90CB-14EF-B749-B4D7-7C413FE3CCC1.root
-```
-
-Which can be accessed in the following manner:
-
-```
-root://cmseos.fnal.gov//store/user/cmsdas/2022/short_exercises/Tau/DYJetsToLL__7B7D90CB-14EF-B749-B4D7-7C413FE3CCC1.root
+root://cmseos.fnal.gov//store/user/cmsdas/2023/short_exercises/Tau/DYJetsToLL__7B7D90CB-14EF-B749-B4D7-7C413FE3CCC1.root
 ```
 
 We need to calculate the signal efficiency for each of the two trigger options. To do so, you need to loop over all the entries in a signal MC file using the template provided.
