--- a/_episodes/03-Day3.md
+++ b/_episodes/03-Day3.md
@@ -9,19 +9,19 @@ title: "Exercise 3"
 # keypoints:
 # - "First key point. Brief Answer to questions. (FIXME)"
 ---
-# Estimate backgrounds
-
-
+# Estimate backgrounds (Thursday)
 
 The goal of today is to predict the number of signal and background events expected in the signal region. The signal sample we are using is called DYJetsToTauTau_M50. We use the WJetsToLNu, TTToSemiLeptonic, TTTo2L2Nu, and DYJetsToEEMuMu_M-50 MC samples to predict the expected yields for the respective backgrounds. We use the ABCD method for QCD. Using the events observed in the B, C, and D control regions we can form our transfer factor (C/D) and multiply that by the number of events observed in the control region B to form the prediction. The assumption is that the B,C,D regions are predominantly populated by QCD events. In principle, the background processes we took from simulation (in the signal region) may also populate our B,C,D regions. We correct for this by using the simulation to subtract off their contribution from the observed data yields. A slide showing the algebra can be found [here](https://twiki.cern.ch/twiki/pub/CMS/SWGuideCMSDataAnalysisSchoolLPC2023ZTauTauXsec/abcd.pdf).
-<!-- Does not work -->
 
-To save time, a script has been prepared to perform this arithmetic and return the yields. For each dataset it makes histograms of the visible mass for each of the four ABCD regions. Event selection (such as cutting on mT or the number of b-tagged jets) is performed at this stage.
+To save time, a script has been prepared to perform this arithmetic. For each dataset it makes histograms of the visible mass for each of the four ABCD regions. Event selection (such as cutting on mT or the number of b-tagged jets) is performed at this stage.
 
+<https://github.com/jingyucms/nanoAOD-tools/blob/cmsdas2023/analysis/yields_ZTauTau.c>
 
-<https://github.com/fojensen/nanoAOD-tools/blob/cmsdas2022/analysis/yields_ZTauTau.c>
+If you are analyzing the $\mu+\tau_h$ channel, you only need to change the input file location to point to the files you produced from the last exercise and run. For the other 2 channels, you will need to make some small modifications. Then, you should use these histograms to calculate the scale factor and apply the scale factor to estimate the QCD background in region A.
 
 > ## Deliverable
-> Deliverable for the end of the day: a list of the expected signal and background events in the signal region after applying your event selection.
+> The overall scale factor derived from the ratio of estimated QCD in C and D
+> A list of the expected signal and background events in the signal region
+> Histograms (for visible mass) of data on top of estimated background components (QCD from data and other from MC)
 {: .challenge}
 
