--- a/_episodes/04-Day4.md
+++ b/_episodes/04-Day4.md
@@ -14,6 +14,7 @@ title: "Exercise 4"
 
 
 We will use the Higgs Combine Tool to do the statistical analysis. We first need to install Combine:
+
 ```shell
 cd $CMSSW_BASE/src
 git clone https://github.com/cms-analysis/HiggsAnalysis-CombinedLimit.git HiggsAnalysis/CombinedLimit
@@ -24,7 +25,7 @@ cd $CMSSW_BASE/src
 scramv1 b clean; scramv1 b
 ```
 
-As an input, Higgs Combine takes a txt based file containing the observed and expected yields. An example datacard, based on [Tables 1 and 3 of the 13 TeV Z paper](https://cms-results.web.cern.ch/cms-results/public-results/publications/HIG-15-007/#Tab), can be found at the link below. Use this [template](https://github.com/fojensen/nanoAOD-tools/blob/cmsdas2022/analysis/datacard_mumu.txt) to create a card for your analysis.
+As an input, Higgs Combine takes a txt based file containing the observed and expected yields. An example datacard, based on [Tables 1 and 3 of the 13 TeV Z paper](https://cms-results.web.cern.ch/cms-results/public-results/publications/HIG-15-007/#Tab), can be found at the link below. Use this [template](https://github.com/jingyucms/nanoAOD-tools/blob/cmsdas2023/analysis/datacard_mumu.txt) to create a card for your analysis.
 
 ```shell
 cd ${CMSSW_BASE}/src/PhysicsTools/NanoAODTools/analysis/
@@ -32,3 +33,12 @@ combine -M FitDiagnostics datacard.txt --forceRecreateNLL --rMin=0.1 --rMax=10.
 combine -M Significance datacard.txt
 ```
 
+> ## Deliverable
+>The best fitted r value. Does the best fitted r close to 1? Is the result what you expected?
+>Can you compare your results to the best theoretical predictions (that can be found in the 13 [TeV](https://twiki.cern.ch/twiki/bin/view/CMS/TeV) paper)?
+{: .challenge}
+
+
+> ## Bonus
+> - Can you present the stats and systs uncertainties for your final cross section?
+{: .callout}
